--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
-     "sweetalert2": "^11.4.7",
+     "sweetalert2": "^11.4.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
